# WritingBot

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChatComposer.tsx  ChatMessageList.tsx  HeaderBar.tsx  PromptLibrary.tsx  SettingsPanel.tsx
src/services/: aiClient.ts
src/store/: chatStore.ts
src/types/: chat.ts
src/utils/: promptStorage.ts
